force-app/main/default/objects/Bike_Order_Item__c/Bike_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Bike Order Item</label>
    <nameField>
        <displayFormat>BOI-{00000}</displayFormat>
        <label>Bike Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bike Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>