force-app/main/default/objects/Bike_Order_Item__c/fields/Bike__c.field-meta.xml
<CustomField>
    <fullName>Bike__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bike</label>
    <referenceTo>Bike__c</referenceTo>
    <relationshipLabel>Bike Order Items</relationshipLabel>
    <relationshipName>Bike_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>