force-app/main/default/objects/Bike_Order_Item__c/fields/Bike_Order__c.field-meta.xml
<CustomField>
    <fullName>Bike_Order__c</fullName>
    <label>Bike Order</label>
    <referenceTo>Bike_Order__c</referenceTo>
    <relationshipLabel>Bike Order Items</relationshipLabel>
    <relationshipName>Bike_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>